Added parser name in message.properties

--- a/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
@@ -55,6 +55,7 @@ Warnings.Cargo.ParserName=Cargo
 Warnings.AcuCobol.ParserName=AcuCobol Compiler
 Warnings.JavaParser.ParserName=Java
 Warnings.JavaDoc.ParserName=JavaDoc
+Warnings.Kotlin.ParserName=Kotlin
 Warnings.EclipseParser.ParserName=Eclipse ECJ
 Warnings.Taglist.ParserName=Maven Taglist Plugin
 Warnings.Maven.ParserName=Maven
