Add a test for the forensics data table.

--- a/src/main/resources/io/jenkins/plugins/analysis/core/model/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/analysis/core/model/Messages.properties
@@ -27,6 +27,15 @@ Table.Column.Type=Type
 Table.Column.Severity=Severity
 Table.Column.Age=Age
 
+Table.Column.Author=Author
+Table.Column.Email=Email
+Table.Column.Commit=Commit
+
+Table.Column.AuthorsSize=#Authors
+Table.Column.CommitsSize=#Commits
+Table.Column.LastCommit=Last Modified
+Table.Column.AddedAt=Added At
+
 Summary.ShowDetails=Show info and error messages
 
 ConsoleLog.Name=Console Output
