Enable a non standard sort order for columns.
Refactored table models: now objects are used (rather than arrays). So
we are able to provide a sort order that does not depend on the
visualization but on the associated data model (in our case number
of elapsed days).

--- a/src/main/resources/io/jenkins/plugins/analysis/core/model/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/analysis/core/model/Messages.properties
@@ -33,8 +33,8 @@ Table.Column.Commit=Commit
 
 Table.Column.AuthorsSize=#Authors
 Table.Column.CommitsSize=#Commits
-Table.Column.LastCommit=Last Modified
-Table.Column.AddedAt=Added At
+Table.Column.LastCommit=Last Commit
+Table.Column.AddedAt=Added
 
 Summary.ShowDetails=Show info and error messages
 
