Fix sizing of columns.

--- a/src/main/resources/io/jenkins/plugins/analysis/core/model/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/analysis/core/model/Messages.properties
@@ -40,6 +40,7 @@ Summary.ShowDetails=Show info and error messages
 
 ConsoleLog.Name=Console Output
 
+Fixed.Warnings.Header=Fixed Warnings
 New.Warnings.Header=New Warnings
 Outstanding.Warnings.Header=Outstanding Warnings
 Messages.Header=Messages
@@ -72,5 +73,3 @@ Tab.Namespace=Namespace
 Messages.View.Name=Messages
 
 ConsoleLog.View.Title=Console Output (lines {0}-{1})
-
-FixedIssues.View.Name=Fixed Issues
