Add UI configuration of trend.

--- a/src/main/resources/io/jenkins/plugins/analysis/core/util/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/analysis/core/util/Messages.properties
@@ -17,6 +17,10 @@ SeverityFilter.High=Error and High
 SeverityFilter.Normal=Error, High and Normal
 SeverityFilter.Low=All Severities
 
+AggregationChart.Top=Top
+AggregationChart.Bottom=Bottom
+AggregationChart.None=None
+
 FieldValidator.Error.ReferenceJobDoesNotExist=There is no such job - maybe the job has been renamed?
 FieldValidator.Error.NegativeThreshold=Threshold must be an integer value greater 0.
 FieldValidator.Error.ThresholdOrder=Threshold ''healthy'' must be less than threshold ''unhealthy''.
