--- a/src/main/resources/io/jenkins/plugins/analysis/core/util/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/analysis/core/util/Messages.properties
@@ -31,20 +31,20 @@ FieldValidator.Error.ThresholdHealthyMissing=If the ''unhealthy'' threshold is d
 FieldValidator.Error.DefaultEncoding=Encoding must be a supported encoding of the Java platform, see: \
   <a href="{0}">java.nio.charset.Charset</a>
 
-QualityGate.Type.Total=Total number of issues (any severity)
-QualityGate.Type.Total.Error=Total number of errors
-QualityGate.Type.Total.High=Total number of warnings (severity high)
-QualityGate.Type.Total.Normal=Total number of warnings (severity normal)
-QualityGate.Type.Total.Low=Total number of warnings (severity low)
+QualityGate.Type.Total=Total (any severity)
+QualityGate.Type.Total.Error=Total (errors only)
+QualityGate.Type.Total.High=Total (severity high only)
+QualityGate.Type.Total.Normal=Total (severity normal only)
+QualityGate.Type.Total.Low=Total (severity low only)
 
-QualityGate.Type.New=Number of new issues (any severity)
-QualityGate.Type.New.Error=Number of new errors
-QualityGate.Type.New.High=Number of new warnings (severity high)
-QualityGate.Type.New.Normal=Number of new warnings (severity normal)
-QualityGate.Type.New.Low=Number of new warnings (severity low)
+QualityGate.Type.New=New (any severity)
+QualityGate.Type.New.Error=New (errors only)
+QualityGate.Type.New.High=New (severity high only)
+QualityGate.Type.New.Normal=New (severity normal only)
+QualityGate.Type.New.Low=New (severity low only)
 
 QualityGate.Type.Delta=Delta (any severity)
-QualityGate.Type.Delta.Error=Delta of errors
-QualityGate.Type.Delta.High=Delta of warnings (severity high)
-QualityGate.Type.Delta.Normal=Delta of warnings (severity normal)
-QualityGate.Type.Delta.Low=Delta of warnings (severity low)
+QualityGate.Type.Delta.Error=Delta (errors only)
+QualityGate.Type.Delta.High=Delta (severity high only)
+QualityGate.Type.Delta.Normal=Delta (severity normal only)
+QualityGate.Type.Delta.Low=Delta (severity low only)
