--- a/src/main/resources/io/jenkins/plugins/analysis/core/util/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/analysis/core/util/Messages.properties
@@ -17,9 +17,10 @@ SeverityFilter.High=Error and High
 SeverityFilter.Normal=Error, High and Normal
 SeverityFilter.Low=All Severities
 
-AggregationChart.Top=Top
-AggregationChart.Bottom=Bottom
-AggregationChart.None=None
+AggregationChart.AGGREGATION_TOOLS=Aggregation (top) and tools
+AggregationChart.TOOLS_AGGREGATION=Tools and aggregation (bottom)
+AggregationChart.TOOLS_ONLY=No aggregation, only tools
+AggregationChart.NONE=No trend charts
 
 FieldValidator.Error.ReferenceJobDoesNotExist=There is no such job - maybe the job has been renamed?
 FieldValidator.Error.NegativeThreshold=Threshold must be an integer value greater 0.
