Refactor QualityGateType so that this enum can be used in several places.

--- a/src/main/resources/io/jenkins/plugins/analysis/core/util/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/analysis/core/util/Messages.properties
@@ -32,20 +32,22 @@ FieldValidator.Error.ThresholdHealthyMissing=If the ''unhealthy'' threshold is d
 FieldValidator.Error.DefaultEncoding=Encoding must be a supported encoding of the Java platform, see: \
   <a href="{0}">java.nio.charset.Charset</a>
 
-QualityGate.Type.Total=Total (any severity)
-QualityGate.Type.Total.Error=Total (errors only)
-QualityGate.Type.Total.High=Total (severity high only)
-QualityGate.Type.Total.Normal=Total (severity normal only)
-QualityGate.Type.Total.Low=Total (severity low only)
+Statistics.Total=Total (any severity)
+Statistics.Total.Error=Total (errors only)
+Statistics.Total.High=Total (severity high only)
+Statistics.Total.Normal=Total (severity normal only)
+Statistics.Total.Low=Total (severity low only)
 
-QualityGate.Type.New=New (any severity)
-QualityGate.Type.New.Error=New (errors only)
-QualityGate.Type.New.High=New (severity high only)
-QualityGate.Type.New.Normal=New (severity normal only)
-QualityGate.Type.New.Low=New (severity low only)
+Statistics.New=New (any severity)
+Statistics.New.Error=New (errors only)
+Statistics.New.High=New (severity high only)
+Statistics.New.Normal=New (severity normal only)
+Statistics.New.Low=New (severity low only)
 
-QualityGate.Type.Delta=Delta (any severity)
-QualityGate.Type.Delta.Error=Delta (errors only)
-QualityGate.Type.Delta.High=Delta (severity high only)
-QualityGate.Type.Delta.Normal=Delta (severity normal only)
-QualityGate.Type.Delta.Low=Delta (severity low only)
+Statistics.Delta=Delta (any severity)
+Statistics.Delta.Error=Delta (errors only)
+Statistics.Delta.High=Delta (severity high only)
+Statistics.Delta.Normal=Delta (severity normal only)
+Statistics.Delta.Low=Delta (severity low only)
+
+Statistics.Fixed=Fixed (any severity)
