Add protolint to messages

--- a/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
@@ -120,6 +120,7 @@ Warnings.AnsibleLint.ParserName=Ansible Lint
 Warnings.RFLint.ParserName=Robot Framework Lint
 Warnings.LinuxKernelOutput.ParserName=Linux Kernel Output Parser
 Warnings.WarningsPlugin.ParserName=Warnings Plugin Native Format
+Warnings.ProtoLint.ParserName=ProtoLint
 
 Violations.AndroidLint=Android Lint
 Violations.CodeNarc=CodeNarc
