Ensure that IDs are valid URLs.

--- a/src/main/resources/io/jenkins/plugins/analysis/core/util/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/analysis/core/util/Messages.properties
@@ -22,6 +22,7 @@ AggregationChart.TOOLS_AGGREGATION=Tools and aggregation (bottom)
 AggregationChart.TOOLS_ONLY=No aggregation, only tools
 AggregationChart.NONE=No trend charts
 
+FieldValidator.Error.WrongIdFormat=An ID must be a valid URL.
 FieldValidator.Error.ReferenceJobDoesNotExist=There is no such job - maybe the job has been renamed?
 FieldValidator.Error.NegativeThreshold=Threshold must be an integer value greater 0.
 FieldValidator.Error.ThresholdOrder=Threshold ''healthy'' must be less than threshold ''unhealthy''.
