--- a/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
@@ -42,6 +42,7 @@ Warnings.Ccm.ParserName=CCM
 Warnings.RuboCop.ParserName=RuboCop
 Warnings.SonarQube.ParserName=SonarQube
 
+Warnings.ClangAnalyzer.ParserName=Clang-Analyzer
 Warnings.ClangTidy.ParserName=Clang-Tidy
 
 Warnings.CheckStyle.ParserName=CheckStyle
