Added support for JUnit

--- a/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
@@ -130,6 +130,7 @@ Violations.DocFx=DocFX
 Violations.ErrorProne=Error Prone
 Violations.Flake8=Flake8
 Violations.JSHint=JSHint
+Violations.JUnit=JUnit
 Violations.Klocwork=Klocwork
 Violations.MyPy=MyPy
 Violations.PIT=Pit Test Coverage
