--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
@@ -37,6 +37,9 @@ Warnings.Dry.Name=Duplicate Code
 Warnings.CPD.ParserName=CPD
 Warnings.DupFinder.ParserName=Resharper dupFinder
 Warnings.Simian.ParserName=Simian
+Warnings.HadoLint.ParserName=HadoLint
+Warnings.DockerLint.ParserName=DockerLint
+Warnings.Clair.ParserName=Clair
 
 Warnings.Ccm.ParserName=CCM
 Warnings.RuboCop.ParserName=RuboCop
