Add Flawfinder analysis plugin

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
@@ -67,6 +67,7 @@ Warnings.Maven.ParserName=Maven
 Warnings.CppLint.ParserName=CppLint
 Warnings.CssLint.ParserName=CssLint
 Warnings.FxCop.ParserName=FxCop
+Warnings.Flawfinder.ParserName=Flawfinder
 Warnings.Gendarme.ParserName=Gendarme
 Warnings.JCReport.ParserName=JCReport
 Warnings.JSLint.ParserName=JSLint
