Add churn columns to forensics table.
Update UI tests due to the changed tables.

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/core/model/Messages.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/core/model/Messages.properties
@@ -35,6 +35,8 @@ Table.Column.AuthorsSize=#Authors
 Table.Column.CommitsSize=#Commits
 Table.Column.LastCommit=Last Commit
 Table.Column.AddedAt=Added
+Table.Column.LOC=#LoC
+Table.Column.Churn=Code Churn
 
 Summary.ShowDetails=Show info and error messages
 
