Added OT-Dockerlinter integration
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
@@ -40,6 +40,7 @@ Warnings.Simian.ParserName=Simian
 Warnings.HadoLint.ParserName=HadoLint
 Warnings.DockerLint.ParserName=DockerLint
 Warnings.Clair.ParserName=Clair
+Warnings.OTDockerLint.ParserName=OTDockerLint
 
 Warnings.Ccm.ParserName=CCM
 Warnings.RuboCop.ParserName=RuboCop
