--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
@@ -127,6 +127,7 @@ Warnings.RFLint.ParserName=Robot Framework Lint
 Warnings.LinuxKernelOutput.ParserName=Linux Kernel Output Parser
 Warnings.WarningsPlugin.ParserName=Warnings Plugin Native Format
 Warnings.ProtoLint.ParserName=ProtoLint
+Warnings.Trivy.ParserName=aquasec trivy vulnerability scanner
 
 Violations.AndroidLint=Android Lint
 Violations.CodeNarc=CodeNarc
