Add new parser for Qt translation files

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
@@ -128,6 +128,7 @@ Warnings.LinuxKernelOutput.ParserName=Linux Kernel Output Parser
 Warnings.WarningsPlugin.ParserName=Warnings Plugin Native Format
 Warnings.ProtoLint.ParserName=ProtoLint
 Warnings.Trivy.ParserName=Trivy
+Warnings.QtTranslation.ParserName=Qt Translation
 
 Violations.AndroidLint=Android Lint
 Violations.CodeNarc=CodeNarc
