Add missing option `AGGREGATION_ONLY` to trend charts.

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/core/util/Messages.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/core/util/Messages.properties
@@ -17,9 +17,10 @@ SeverityFilter.High=Error and High
 SeverityFilter.Normal=Error, High and Normal
 SeverityFilter.Low=All Severities
 
-AggregationChart.AGGREGATION_TOOLS=Aggregation (top) and tools
-AggregationChart.TOOLS_AGGREGATION=Tools and aggregation (bottom)
-AggregationChart.TOOLS_ONLY=No aggregation, only tools
+AggregationChart.AGGREGATION_TOOLS=Aggregation on top - tools at the bottom
+AggregationChart.TOOLS_AGGREGATION=Tools on top - aggregation at the bottom
+AggregationChart.TOOLS_ONLY=No aggregation - only tools
+AggregationChart.AGGREGATION_ONLY=Only aggregation - no tools
 AggregationChart.NONE=No trend charts
 
 FieldValidator.Error.WrongIdFormat=An ID must be a valid URL.
