Move patterns, help texts and URLs to analysis-model.

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
@@ -76,6 +76,7 @@ Warnings.Pep8.ParserName=Pep8
 Warnings.StyleCop.ParserName=StyleCop
 Warnings.Armcc.ParserName=Armcc Compiler
 Warnings.Buckminster.ParserName=Buckminster
+Warnings.Brakeman.ParserName=Brakeman
 Warnings.Coolflux.ParserName=Coolflux DSP Compiler
 Warnings.Doxygen.ParserName=Doxygen
 Warnings.DrMemory.ParserName=Dr. Memory
