implement MonitorPortlet for pull-request-monitoring plugin

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/core/portlets/Messages.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/core/portlets/Messages.properties
@@ -1,2 +1,3 @@
 IssuesTablePortlet.Name=Static analysis issues per tool and job
 IssuesChartPortlet.Name=Static analysis issues chart
+PullRequestMonitoringPortlet.Name=Warnings Next Generation
