ReportScanningTool's doCheckPattern now tells you if its required

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/core/model/Messages.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/core/model/Messages.properties
@@ -41,6 +41,7 @@ Table.Column.Churn=Code Churn
 Summary.ShowDetails=Show info and error messages
 
 ConsoleLog.Name=Console Output
+ReportScanningTool.PatternIsEmptyAndConsoleParsingDisabled=A pattern must be specified. This parser is unable to parse the console output.
 
 Fixed.Warnings.Header=Fixed Warnings
 New.Warnings.Header=New Warnings
