Refactor ReportScanningTool help for pattern field
* Now have 3 help variants for the 3 scenarios, default pattern so no
console, pattern optional as console permitted, and no console so
pattern required.
* Description texts now all link to Ant docs by parameter.
* Matching changes to GroovyScript's jelly

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/groovy/Messages.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/groovy/Messages.properties
@@ -24,3 +24,5 @@ GroovyParser.Error.Example.ok.message=message: {0}
 
 GroovyParser.Error.Example.wrongReturnType=Result of the script is not of type ''Issue'': {0}
 GroovyParser.Error.Example.regexpDoesNotMatch=The regular expression does not match the example text.
+
+ParserConfiguration.consoleLogScanningPermitted=Warning: This may be insecure. See associated help for details.
