Use new build status icons for quality gate status.
Moved the whole Java based summary rendering code to the client side.
So we can apply CSS styling in a simpler way.

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/core/model/Messages.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/core/model/Messages.properties
@@ -18,6 +18,8 @@ Tool.NoIssuesSinceBuild={0} for {1} builds, i.e. since build {2}
 Tool.QualityGate=Quality gate:
 Tool.ReferenceBuild=Reference build:
 
+Summary.NoIssuesSinceBuild=No issues for {0} builds, i.e. since build:
+
 Table.Column.Details=Details
 Table.Column.Module=Module
 Table.Column.Package=Package
