Show the number of analyzed reports in the title.

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/core/model/Messages.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/core/model/Messages.properties
@@ -7,6 +7,11 @@ Tool.Trend.Name={0} Warnings Trend
 Tool.NoIssues=No warnings
 Tool.OneIssue=One warning
 Tool.MultipleIssues={0} warnings
+
+Tools.NoIssues=No warnings in {0} analyses
+Tools.OneIssue=One warning in {0} analyses
+Tools.MultipleIssues={1} warnings in {0} analyses
+
 Tool.OneNewWarning=One new warning
 Tool.MultipleNewWarnings={0} new warnings
 Tool.OneOutstandingWarning=One outstanding warning
