Add dot as valid character in IDs.

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/core/util/Messages.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/core/util/Messages.properties
@@ -23,7 +23,7 @@ AggregationChart.TOOLS_ONLY=No aggregation - only tools
 AggregationChart.AGGREGATION_ONLY=Only aggregation - no tools
 AggregationChart.NONE=No trend charts
 
-FieldValidator.Error.WrongIdFormat=An ID must be a valid URL.
+FieldValidator.Error.WrongIdFormat=An ID must match the regexp pattern {0}, but {1} does not.
 FieldValidator.Error.ReferenceJobDoesNotExist=There is no such job - maybe the job has been renamed?
 FieldValidator.Error.NegativeThreshold=Threshold must be an integer value greater 0.
 FieldValidator.Error.ThresholdOrder=Threshold ''healthy'' must be less than threshold ''unhealthy''.
