Add `noopener` and `norefferer` to `message.properties`.

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/core/util/Messages.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/core/util/Messages.properties
@@ -32,7 +32,7 @@ FieldValidator.Error.ThresholdUnhealthyMissing=If the ''healthy'' threshold is d
 FieldValidator.Error.ThresholdHealthyMissing=If the ''unhealthy'' threshold is defined, then also the ''healthy'' \
   threshold must be set.
 FieldValidator.Error.DefaultEncoding=Encoding must be a supported encoding of the Java platform, see: \
-  <a href="{0}">java.nio.charset.Charset</a>
+  <a rel="noopener noreferrer" href="{0}">java.nio.charset.Charset</a>
 
 Statistics.Total=Total (any severity)
 Statistics.Total.Error=Total (errors only)
