changed revApi visualization according to suggestions from U.Hafner. Added tests for revApi model

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/Messages.properties
@@ -26,4 +26,11 @@ Warnings.OpenTasks.Name=Open Tasks Scanner
 
 RegisteredParser.Name=Registered Parser
 
+RevApi.Table.Column.Name=Name
+RevApi.Table.Column.oldFile=Old File
+RevApi.Table.Column.newFile=New File
+RevApi.Table.Column.category=Category
+RevApi.Table.Column.source=Source
+RevApi.Table.Column.binary=Binary
+
 
