Make issues in modified code visible.

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/core/util/Messages.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/core/util/Messages.properties
@@ -39,12 +39,14 @@ Statistics.Total.Error=Total (errors only)
 Statistics.Total.High=Total (severity high only)
 Statistics.Total.Normal=Total (severity normal only)
 Statistics.Total.Low=Total (severity low only)
+Statistics.Total.Modified=Total (in modified code)
 
 Statistics.New=New (any severity)
 Statistics.New.Error=New (errors only)
 Statistics.New.High=New (severity high only)
 Statistics.New.Normal=New (severity normal only)
 Statistics.New.Low=New (severity low only)
+Statistics.New.Modified=New (in modified code)
 
 Statistics.Delta=Delta (any severity)
 Statistics.Delta.Error=Delta (errors only)
